src/FinancialForce ERP Core/objects/FeatureEnablementLog__c.object
<CustomObject>
    <fields>
        <fullName>ActivationNumber__c</fullName>
        <description>Groups log records for a particular activation</description>
        <label>Activation Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FeatureName__c</fullName>
        <description>The fully qualified API name of the related Feature.</description>
        <label>Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEnablement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the Feature was being enabled or disabled.</description>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogDetail__c</fullName>
        <description>Description of events encountered while enabling or disabling the Feature.</description>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LogSeverity__c</fullName>
        <description>The severity of the log.</description>
        <label>Severity</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StepName__c</fullName>
        <description>The fully qualified API name of the related Step (if any).</description>
        <label>Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature Enablement Log</label>
    <nameField>
        <label>Feature Activation Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Enablement Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>